import java.nio.charset.StandardCharsets
import java.nio.file.FileSystems

plugins {
    id 'java'
    id 'idea'
    id 'project-report'
    id 'org.springframework.boot' version '2.2.1.RELEASE'
    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
}

group = 'org.gty'
version = '1.0.7.RELEASE'
description = 'Spring Boot Reactive Demo'

java.sourceCompatibility = JavaVersion.VERSION_13
java.targetCompatibility = JavaVersion.VERSION_13
[compileJava, compileTestJava]*.options*.encoding = "${StandardCharsets.UTF_8}"
javadoc.options.encoding = "${StandardCharsets.UTF_8}"

repositories {
    jcenter()
}

configurations {
    implementation.exclude module: 'spring-boot-starter-logging'

    developmentOnly
    runtimeClasspath { extendsFrom developmentOnly }
    compileOnly { extendsFrom annotationProcessor }
}

bootRun {
    def activeProfile = 'spring.profiles.active'
    systemProperties[activeProfile] = project.gradle.startParameter.systemPropertiesArgs[activeProfile]
}

dependencies {
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-amqp'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
//  implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
//  implementation 'org.springframework.boot:spring-boot-starter-data-ldap'
//  implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
//  implementation 'org.springframework.boot:spring-boot-starter-data-rest'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
//  implementation 'org.springframework.boot:spring-boot-starter-json'
    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
    implementation 'org.springframework.boot:spring-boot-starter-quartz'
    implementation 'org.springframework.boot:spring-boot-starter-security'
//  implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
//  implementation 'org.springframework.boot:spring-boot-starter-undertow'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
//  implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
//  implementation 'org.springframework.boot:spring-boot-starter-websocket'

//  developmentOnly 'org.springframework.boot:spring-boot-devtools'
//  compileOnly 'org.projectlombok:lombok'
//  annotationProcessor 'org.projectlombok:lombok'

    implementation 'org.springframework.retry:spring-retry:1.2.4.RELEASE'
    implementation 'org.springframework.session:spring-session-data-redis:2.2.0.RELEASE'
    implementation 'org.springframework.kafka:spring-kafka:2.3.1.RELEASE'
//  implementation 'org.springframework.security:spring-security-ldap:5.1.6.RELEASE'

    implementation 'org.flywaydb:flyway-core:6.0.6'
    implementation 'org.postgresql:postgresql:42.2.8'
    implementation 'com.lmax:disruptor:3.4.2'
//  implementation 'io.jsonwebtoken:jjwt:0.9.0'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.10.0'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.10.0'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-guava:2.10.0'
    implementation 'com.zaxxer:HikariCP:3.4.1'
    implementation 'com.google.guava:guava:28.1-jre'
    implementation 'com.google.code.gson:gson:2.8.5'
    implementation 'com.google.code.findbugs:jsr305:3.0.2'
    implementation 'com.ibm.icu:icu4j:64.2'

    implementation 'commons-beanutils:commons-beanutils:1.9.3'
    implementation 'commons-codec:commons-codec:1.12'
    implementation 'commons-fileupload:commons-fileupload:1.4'
    implementation 'commons-io:commons-io:2.6'
    implementation 'org.apache.commons:commons-lang3:3.9'
    implementation 'org.apache.commons:commons-text:1.7'
    implementation 'org.apache.commons:commons-math3:3.6.1'
    implementation 'org.apache.commons:commons-collections4:4.3'
    implementation 'org.apache.commons:commons-compress:1.18'
    implementation 'org.apache.commons:commons-pool2:2.6.2'

//  implementation 'org.thymeleaf:thymeleaf:3.0.11.RELEASE'
//  implementation 'org.thymeleaf:thymeleaf-spring5:3.0.11.RELEASE'
//  implementation 'org.thymeleaf.extras:thymeleaf-extras-java8time:3.0.2.RELEASE'
//  implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5:3.0.4.RELEASE'
//  implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:2.3.0'

    implementation 'org.hibernate.validator:hibernate-validator:6.0.17.Final'
//  implementation 'javax.validation:validation-api:2.0.1.Final'
    implementation 'javax.annotation:javax.annotation-api:1.3.2'
    implementation 'javax.xml.bind:jaxb-api:2.3.1'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.kafka:spring-kafka-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.powermock:powermock-module-junit4:2.0.2'
    testImplementation 'org.powermock:powermock-api-mockito2:2.0.2'
//  testRuntimeOnly 'com.h2database:h2:1.4.196'
}

clean.doLast {
    project.delete "$projectDir${FileSystems.default.separator}out${FileSystems.default.separator}"
}

// for Java 12 and 13 features
tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

bootRun.jvmArgs(['--enable-preview'])

task buildApp(type: GradleBuild) {
    tasks = ['clean', 'bootJar']
}
